# ABS_Data

./: .gitignore  README.md  _tmp_g20_sa2_inspect.py  _tmp_g21_sa2_inspect.py  main.py  pyproject.toml
data_extraction/: extract_c21_g01_sa2.py  extract_c21_g18_sa2.py  extract_c21_g19.py  extract_c21_g19_sa2.py  find_health_dataflows.py
docs/: processing_c21_g01_sa2.md  processing_c21_g19_sa2.md
notebooks/: check_lookups.ipynb  explore_c21_g01_sa2.ipynb  explore_c21_g19_sa2_health_conditions.ipynb  explore_c21_g21_sa2.ipynb
processing/: __init__.py  c21_g01_sa2.py  c21_g19_sa2.py
src/: __init__.py  api_client.py  config.py  data_extractor.py  explorer.py
tests/: __init__.py  test_api_client.py  test_config.py  test_processing_c21_g01_sa2.py  test_processing_c21_g19_sa2.py
